[tool.poetry]
name = "asyncrunner"
version = "1.0.0"
description = "基于 asyncio 的异步任务运行器"
authors = ["huangyanming <13528685024@163.com>"]
readme = "README.md"
packages = [{ include = "asyncrunner" }]

[tool.poetry.dependencies]
python = ">=3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
